# afkode

./: .gitignore  CONTRIBUTING.md  MACOS-AUDIT.md  README.md  ROADMAP.md  hud.html  index.html  package-lock.json  package.json  palette.html  vite.config.ts
.cargo/: config.toml
.claude/skills/qa-visual/: SKILL.md  drive.js
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: AwayBanner.tsx  Button.tsx  Chip.tsx  EmptyState.tsx  FilePreviewPanel.tsx  GhostBadge.tsx  GitChip.tsx  HeaderSearch.tsx  HelpList.tsx  Inbox.tsx  InboxButton.tsx  InboxRow.tsx  Kbd.tsx  LauncherButton.tsx  Launchers.tsx  LinkToast.tsx  Loader.tsx  Modal.tsx  ModeBadge.tsx  Overlay.tsx  PickFolder.tsx  RecentCard.tsx  Recents.tsx  SearchBar.tsx  SetNote.tsx  SettingsRow.tsx  StatusBar.tsx  Switch.tsx  Tab.tsx  Tabs.tsx  Titlebar.tsx  WizardStep.tsx
.github/workflows/: build-test.yml  ci.yml  pages.yml  release.yml
docs/: MEDIA.md  ROADMAP-FEATURES.md  WARP-GAP-ANALYSIS.md  handoff-macos-terminal-verification.md
ds/: build-css.mjs  package-lock.json  package.json  tsconfig.json
ds/docs/: AwayBanner.md  Button.md  Chip.md  EmptyState.md  FilePreviewPanel.md  GhostBadge.md  GitChip.md  HeaderSearch.md  HelpList.md  Inbox.md  InboxButton.md  InboxRow.md  Kbd.md  LauncherButton.md  Launchers.md  LinkToast.md  Loader.md  Modal.md  ModeBadge.md  Overlay.md  PickFolder.md  RecentCard.md  Recents.md  SearchBar.md  SetNote.md  SettingsRow.md  StatusBar.md  Switch.md  Tab.md  Tabs.md  Titlebar.md  WizardStep.md
ds/fonts/: cascadia.css
ds/src/: core.tsx  empty.tsx  icons.tsx  index.ts  panels.tsx  status.tsx  titlebar.tsx
site/: index.html
src/: blocks.ts  hud.ts  main.ts  modelExts.ts  modelPreview.ts  palette.ts  styles.css  tour.ts  xtermDeadKeyAddon.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
