[package]
name = "afkode"
version = "0.8.6"
description = "In-game overlay to supervise AI coding agents while you play"
authors = ["Omar Hernandez"]
license = "MIT"
edition = "2021"

[lib]
name = "afkode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: without it, `transparent: true` windows on macOS keep
# an opaque white WKWebView backing layer behind the CSS-rounded panel.
# No-op on other targets; bars App Store distribution (we ship via GitHub).
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tiny_http = "0.12"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
] }
webview2-com = "0.38"
windows-core = "0.61"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
